--- a/desafio_mobile/pubspec.yaml
+++ b/desafio_mobile/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: 
-  firebase_auth:  
+  firebase_auth:
+  flutter_login_facebook:  
 
 
   # The following adds the Cupertino Icons font to your application.
