Finalizando a localização na pagina home

--- a/desafio_mobile/pubspec.yaml
+++ b/desafio_mobile/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
     sdk: flutter
   firebase_core: 
   firebase_auth:
-  flutter_login_facebook:  
+  flutter_login_facebook:
+  geolocator: ^5.1.5  
 
 
   # The following adds the Cupertino Icons font to your application.
