--- a/desafio_mobile/android/app/src/main/AndroidManifest.xml
+++ b/desafio_mobile/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
     package="com.example.desafio_mobile">
   
   <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.ACSESS_FINE_LOCATION"/>
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
    <application
         android:label="desafio_mobile"
