--- a/desafio_mobile/pubspec.yaml
+++ b/desafio_mobile/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   firebase_core: 
   firebase_auth:
   flutter_login_facebook:
-  geolocator: ^5.1.5  
+  geolocator: ^5.1.5
+  provider: ^3.1.0+1  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -36,6 +37,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  test:
+  mockito: ^4.1.1
+  rxdart:
+  flutter_automation: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
